ffi: replace Coffi with babashka/ffi